# Quadcopter

./: .gitignore  CMakeLists.txt  README.md
lib/: MPU6050.c  MPU6050.h  NRF24L01.c  NRF24L01.h
src/: cfg.h  main.c
src/logic/: motors.c  motors.h
